[gd_scene load_steps=2 format=2]

[ext_resource path="res://Music.gd" type="Script" id=1]

[node name="Music" type="Node"]
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="RandomTrackCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MusicEffects" type="Tween" parent="."]

[connection signal="timeout" from="RandomTrackCooldown" to="." method="play_music" binds= [ 1 ]]
